--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,11 @@ spring.application.name=biblioteca
 # Puerto
 server.port=8081
 
-# Swagger
+# Swagger ( http://localhost:8081/doc/swagger-ui/index.html)
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/doc/swagger-ui.html
+spring.web.resources.add-mappings=true
 
 # H2 en archivo local (./data/biblioteca)
 spring.datasource.url=jdbc:h2:file:./data/biblioteca;AUTO_SERVER=TRUE
@@ -16,8 +17,10 @@ spring.datasource.password=
 
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.defer-datasource-initialization=true
 
 # Consola H2
 spring.h2.console.enabled=true
