Implementación de JWT y mejoras en la seguridad

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,16 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
 
+#JWT
+logging.level.org.springframework.security=DEBUG
+jwt.secret=Expedition33gano9premiosyesGOTYdel2026
+jwt.expirationMinutes=120
+
 # Consola H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+# Errores
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=always
